--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,20 +1,25 @@
-{% extends 'base.html' %}
-{% block title %}Password reset Done{% endblock %}
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Password reset complete{% endblock %}
+{% block head_block %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+</script>
+{% endblock %}
+
 {% block body_block %}
-<div class="row">
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
-    <aside class="col-sm-4">
-        <h2>Password reset complete</h2>
-        <div class="card">
-            <article class="card-body">
+<div class="container login_form">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-5">
+            <div class="jumbotron">
+                <h3 class="text-center">Password reset complete</h3>
+                <hr>
                 <p>
-                    Your password has been set. You may go ahead and <a href="{% url 'index' %}">sign in</a> now.
+                Your password has been set. You can try <a href="{% url 'djapp:user_login' %}">logging in again</a> now.
                 </p>
-            </article>
+            </div>
         </div>
-    </aside>
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
+    </div>
 </div>
 {% endblock %}
