--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,39 +1,54 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 {% block title %}Change password{% endblock %}
+{% block head_block %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+</script>
+{% endblock %}
 {% block body_block %}
-<div class="row">
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
-    <aside class="col-sm-4">
-        <h2>Change Password</h2>
-        <div class="card">
-            {% if validlink %}
-            <article class="card-body">
-                <form method="post">
+<div class="container login_form">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-5">
+            <div class="jumbotron">
+                <h3 class="text-center">Change password</h3>
+                <hr>
+                {% if validlink %}
+                <form method="POST">
                     {% csrf_token %}
-                    {% for field in form %}
-                    <p>
-                        {{ field.label_tag }}<br>
-                        {{ field }}
-                        {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
-                        {% endfor %}
-                    </p>
-                    {% endfor %}
-                    <button type="submit">Submit</button>
+                    <div class="form-group">
+                        <label class="col-sm-12 col-form-label">New Password</label>
+                        <input class="form-control" type="password" name="new_password1" required="" id="id_new_password1">
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-12 col-form-label">New Password Confirmation</label>
+                        <input class="form-control" type="password" name="new_password2" required="" id="id_new_password2">
+                    </div>
+                    {% if error %}
+                    <div class="alert alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">x</button>
+                        <strong>{{ error }}</strong>
+                    </div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                    {% if 'new_password2' in form.errors %}
+                    <br>
+                    <strong>{{ form.errors.new_password2|join:", " }}</strong>
+                    {% endif %}
                 </form>
-            </article>
-            {% else %}
-            <article class="card-body">
+                {% else %}
                 <p>
                     The password reset link was invalid, possibly because it has already been used.
                     Please request a new password reset.
                 </p>
-            </article>
-            {% endif %}
+                {% endif %}
+            </div>
         </div>
-    </aside>
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
+    </div>
 </div>
 {% endblock %}
