--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,11 +1,27 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+{% block title%}Password Emailed{%endblock%}
+{% block head_block %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+</script>
+{% endblock %}
 {% block body_block %}
-<p>
-    We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.
-</p>
-<p>
-    If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.
-</p>
+<div class="container login_form">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="jumbotron">
+                <h3 class="text-center">Password Emailed</h3>
+                <hr>
+                <p>
+                    We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
+                </p>
+                <p>
+                    If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
