--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,30 +1,38 @@
-{% extends 'base.html' %}
-{% block title %}Password Reset forum{% endblock %}
+{% extends "base.html" %}
+{% load static %}
+{% block title%}Password Reset Form{%endblock%}
+{% block head_block %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+</script>
+{% endblock %}
 {% block body_block %}
-<div class="row">
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
-    <aside class="col-sm-4">
-        <h2>Forget Password</h2>
-        <div class="card">
-            <article class="card-body">
-                <form method="post">
+<div class="container login_form">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-5">
+            <div class="jumbotron">
+                <h3 class="text-center">Forget Password</h3>
+                <hr>
+                <form method="POST">
                     {% csrf_token %}
-                    {% for field in form %}
-                    <p>
-                        {{ field.label_tag }}<br>
-                        {{ field }}
-                        {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
-                        {% endfor %}
-                    </p>
-                    {% endfor %}
-                    <button type="submit">Submit</button>
+                    <div class="form-group">
+                        <input type="email" name="email" class="form-control" maxlength="254" required="" placeholder="Your Email Address" id="id_email">
+                    </div>
+                    {% if error %}
+                    <div class="alert alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">x</button>
+                        <strong>{{ error }}</strong>
+                    </div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
                 </form>
-            </article>
+            </div>
         </div>
-    </aside>
-    <aside class="col-sm-4">
-    </aside> <!-- col.// -->
+    </div>
 </div>
 {% endblock %}
